# Relay

./: .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json
.github/workflows/: ci.yml  dist.yml
.specs/: ai.md  architecture.md  backend.md  coding-standards.md  database.md  deployment.md  desktop.md  events.md  integrations.md  knowledge.md  portal.md  runtime.md  security.md  temporal.md  vision.md
apps/cli/: package.json
apps/cli/src/: cli.ts  context.ts
apps/desktop/: README.md  index.html  package.json  tsconfig.json
apps/desktop/src/: App.tsx  index.css  main.tsx  runtime.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/portal/: index.html  package.json  tsconfig.json  vite.config.ts
apps/portal/src/: App.tsx  api.ts  index.css  main.tsx
scripts/: build-sidecar.mjs  dev.mjs  install-desktop.sh  install-server.sh
services/: README.md
services/backend/: .dockerignore  .env.example  Dockerfile  drizzle.config.ts  package.json
services/backend/drizzle/: 0000_absent_bill_hollister.sql  0001_exotic_sebastian_shaw.sql  0002_silent_gladiator.sql  0003_famous_mandarin.sql  0004_far_the_captain.sql  0005_next_miek.sql  0006_minor_puppet_master.sql  0007_normal_master_mold.sql  0008_far_phil_sheldon.sql  0009_narrow_talisman.sql  0011_strong_banshee.sql
services/backend/src/: app.controller.ts  main.ts  (+2 more)
services/runtime/: package.json
(+202 files in other folders)
