[package]
name = "relay"
version = "0.1.0"
description = "Relay desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "relay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Capitalized so the macOS Dock and window menus show "Relay" in dev mode,
# where no app bundle (with its Info.plist display name) exists.
[[bin]]
name = "Relay"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

